my icons wont hover

--- a/app/index.html
+++ b/app/index.html
@@ -10,23 +10,29 @@
   <div class="header">
 
     <div class="top">
-      <h3 class='blue'> Etsy </h3>
-      <h6 class='blue'> Sell on Etsy</h6>
-      <h6 class='blue'> Register </h6>
-      <button class='blue'>Sign in</button>
-    </div>
 
-    <div class="middle">
-      <input type="button" name="name" value="">
-      <button> Search </button>
-    </div>
+      <h3 class='blue'> Etsy </h3>
+      <span class="middle">
+        <input class="look">
+        <a class="button is-primary ser">Search</a>
+      </span>
+
+
+
+
+      <img class='cart' src="http://i.imgur.com/MIGWeZC.png " alt="" />
+      <a class="button is-info is-outlined"> Sign In</a>
+      <span class='etsy'> Sell on Etsy</span>
+      <span class='etsy'> Register </span>
+  </div>
+
 
     <div class="bottom">
-      <span>Clothing & Accessories</span>
-      <span>Jewelry</span>
-      <span>Craft Supplies & Tools </span>
-      <span>Weddings</span>
-      <span>More</span>
+      <span class='space'>Clothing & Accessories</span>
+      <span class='space'>Jewelry</span>
+      <span class='space'>Craft Supplies & Tools </span>
+      <span class='space'>Weddings</span>
+      <span class='space'>More</span>
     </div>
 
 </div>  <!-- header -->
@@ -37,43 +43,43 @@
     <div class="right">
 
       <div class="results">
-        <span>Show results for: </span>
+        <span class='bold'>Show results for: </span>
 
-        <ul class="categories">
+        <ul class="catagories">
           <li class='title'>All catagories</li>
-          <li>Home & Living</li>
-          <li>Art & Collectiles</li>
-          <li>Weddings</li>
-          <li>Clothing</li>
-          <li>Paper & Party Supplies</li>
-          <li>Jewelry</li>
-          <li>Accessories</li>
-          <li>Craft Supplies & Tools</li>
-          <li>Bags & Purses</li>
-          <li>Bath & Beauty</li>
-          <li>Shoes</li>
-          <li>Books,Movies & Music</li>
-          <li>Toys & Games</li>
-          <li>Electronics & Accessories</li>
-          <li>Pet Supplies</li>
+          <li class='it'>Home & Living</li>
+          <li class='it'>Art & Collectiles</li>
+          <li class='it'>Weddings</li>
+          <li class='it'>Clothing</li>
+          <li class='it'>Paper & Party Supplies</li>
+          <li class='it'>Jewelry</li>
+          <li class='it'>Accessories</li>
+          <li class='it'>Craft Supplies & Tools</li>
+          <li class='it'>Bags & Purses</li>
+          <li class='it'>Bath & Beauty</li>
+          <li class='it'>Shoes</li>
+          <li class='it'>Books,Movies & Music</li>
+          <li class='it'>Toys & Games</li>
+          <li class='it'>Electronics & Accessories</li>
+          <li class='it'>Pet Supplies</li>
         </ul>
 
       </div>  <!-- results -->
     </div>  <!-- right-->
 
-
+<img src="" alt="" />
 
     <div class="left">
 
       <div class="text">
           <div class="one">
             <span class='blu'>All categories</span>
-            <span>>"whiskey"</span>
-            <span>(31,889 Results)</span>
+            <span class='blu1'>>"whiskey"</span>
+            <span class='black'>(31,889 Results)</span>
           </div>
 
           <div class="two">
-            <span>Sort by:</span>
+            <span class='black'>Sort by:</span>
             <span class='blu'> Relevancy</span>
           </div>
       </div>
@@ -81,7 +87,7 @@
 
       <div class="images">
 
-        
+
 
       </div>
 
